--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 #운영 주소 도메인
-
-REACT_APP_API_BASE_URL=http://localhost:8080
+REACT_APP_API_BASE_URL=http://kdt-cloud-3-team01-final.elicecoding.com:8080
