--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,13 @@ jobs:
             cd /var/www
             echo "$SSH_PASSWORD" | sudo -S docker-compose up -d frontend_new
 
+            # 새로운 프론트엔드 인스턴스가 정상적으로 작동하는지 확인
+            sleep 10 # (필요에 따라 이 시간을 조정 가능)
+            if ! curl -f http://127.0.0.1:3001; then
+              echo "New frontend instance failed to start."
+              exit 1
+            fi
+
             # Nginx 설정에서 새로운 인스턴스로 트래픽 전환
             echo "$SSH_PASSWORD" | sudo -S sed -i 's/127.0.0.1:3000;/127.0.0.1:3001;/' /etc/nginx/sites-available/default
             echo "$SSH_PASSWORD" | sudo -S systemctl reload nginx
