--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,31 +44,43 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key.pem -tt $USERNAME@$HOST <<EOF
             echo "$SSH_PASSWORD" | sudo -S docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/nbbang-fe:latest
 
-            # 새로운 프론트엔드 인스턴스를 Docker Compose로 시작
-            cd /var/www
-            echo "$SSH_PASSWORD" | sudo -S docker-compose up -d frontend_new
+            # 3000 포트 체크
+            if curl -f http://127.0.0.1:3000; then
+              echo "3000 포트가 사용 중입니다. 3001로 새 컨테이너 시작."
+              sudo docker-compose up -d frontend_new
 
-            # 새로운 프론트엔드 인스턴스가 정상적으로 작동하는지 확인
-            sleep 10 # (필요에 따라 이 시간을 조정 가능)
-            if ! curl -f http://127.0.0.1:3001; then
-              echo "New frontend instance failed to start."
-              exit 1
+              # 새로운 컨테이너가 정상적으로 실행되었는지 확인
+              sleep 10
+              if ! curl -f http://127.0.0.1:3001; then
+                echo "새로운 프론트엔드 인스턴스 시작 실패"
+                exit 1
+              fi
+
+              # Nginx 설정에서 새로운 인스턴스로 트래픽 전환
+              echo "$SSH_PASSWORD" | sudo -S sed -i 's/127.0.0.1:3000;/127.0.0.1:3001;/' /etc/nginx/sites-available/default
+              echo "$SSH_PASSWORD" | sudo -S systemctl reload nginx
+
+              # 기존 프론트엔드 컨테이너 중지 및 제거
+              sudo docker-compose stop frontend
+              sudo docker-compose rm -f frontend
+
+              # 3001 컨테이너를 3000으로 전환
+              sudo docker rename nbbang-fe-new nbbang-fe
+
+              # Nginx 설정 원복
+              echo "$SSH_PASSWORD" | sudo -S sed -i 's/127.0.0.1:3001;/127.0.0.1:3000;/' /etc/nginx/sites-available/default
+              echo "$SSH_PASSWORD" | sudo -S systemctl reload nginx
+
+            else
+              echo "3000 포트가 사용되지 않음. 3000으로 새 컨테이너 시작."
+              sudo docker-compose up -d frontend
+
+              # 새 컨테이너가 정상적으로 실행되었는지 확인
+              sleep 10
+              if ! curl -f http://127.0.0.1:3000; then
+                echo "새 프론트엔드 인스턴스 시작 실패"
+                exit 1
+              fi
             fi
-
-            # Nginx 설정에서 새로운 인스턴스로 트래픽 전환
-            echo "$SSH_PASSWORD" | sudo -S sed -i 's/127.0.0.1:3000;/127.0.0.1:3001;/' /etc/nginx/sites-available/default
-            echo "$SSH_PASSWORD" | sudo -S systemctl reload nginx
-
-            # 기존 프론트엔드 컨테이너 정리
-            echo "$SSH_PASSWORD" | sudo -S docker-compose stop frontend
-            echo "$SSH_PASSWORD" | sudo -S docker-compose rm -f frontend
-
-            # 새 프론트엔드 인스턴스 이름 변경
-            echo "$SSH_PASSWORD" | sudo -S docker rename nbbang-fe-new nbbang-fe
-
-            # Nginx 설정 원복
-            echo "$SSH_PASSWORD" | sudo -S sed -i 's/127.0.0.1:3001;/127.0.0.1:3000;/' /etc/nginx/sites-available/default
-            echo "$SSH_PASSWORD" | sudo -S systemctl reload nginx
-
           EOF
           rm private_key.pem
