chore: 도메인 변경

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-#운영 주소 도메인
-REACT_APP_API_BASE_URL=http://kdt-cloud-3-team01-final.elicecoding.com:8080
+# #운영 주소 도메인
+REACT_APP_API_BASE_URL=https://nbbang.site
+
+# #개발 주소 도메인
+# REACT_APP_API_BASE_URL_DEV=http://localhost:8080
